# grokking

./: .gitignore  README.md  pyproject.toml
grokking/: analysis.py  data.py  hooks.py  main.py  model.py  rfm.py  train.py  transformer.py  transformer_original.py
plot_scripts/: make_gd_plot.py  make_mlp_plots.py  make_noise_mode_plot.py  make_p97_plot.py  make_phase_diagram.py  make_rfm_plots.py  run_sweep.py
